# slidge

./: .build.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .muc_bot.py  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  README.rst  commitlint.config.js  doap.xml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  watcher.py
.builds/: ci-arm.yml  ci.yml  container.yml  debian-arm.yml  debian.yml  muc_bot.py  pypi.yml  whatsapp.yml
.github/workflows/: mirror.yml
assets/: gateway.xcf
confs/: dummy.ini  movim.env  nginx.conf  prosody.cfg.lua  signald.ini  slidge-example.ini  slidge-tg.example.ini
debian/: common.conf.example  control  postinst  postrm  preinst  prerm  rules  slidge.install  slidge.links  slidge.triggers  tpl.conf  tpl.service
debian/systemd/: slidge@.service
dev/: Containerfile-ci  Containerfile-debian  Containerfile-debian-base  Containerfile-debian-repo-check  Containerfile-debian-test  Containerfile-tdlib  Containerfile-tests  Containerfile-wheel  build.py  make-badge.sh  muc_bot.py  update_docs.py
dev/confs/: mod_privilege.lua  nginx.conf  prosody.cfg.lua  slidge-example.ini
docs/: requirements.txt
docs/source/: api.rst  argparsers.py  conf.py  config.rst  features.rst  glossary.rst  index.rst  intro.rst  tutorial.rst
docs/source/admin/: attachments.rst  component.rst  config.rst  daemon.rst  discord.rst  facebook.rst  general.rst  index.rst  install.rst  launch.rst  note.rst  plugin_specific.rst  privilege.rst  signal.rst  telegram.rst  whatsapp.rst  xmpp_server.rst
docs/source/dev/: api.rst  contributing.rst  design.rst  general.rst  howto.rst  index.rst  plugin.rst  tutorial.rst
docs/source/guide/: index.rst
docs/source/signal/: index.rst
docs/source/user/: commands.rst  common.rst  contacts.rst  general.rst  index.rst  low_profile.rst  note.rst  register.rst  signal.rst  telegram.rst
slidge/: __init__.py  __main__.py  __version__.py  api.py  base_legacy.py  buddy.py  database.py  db.py  gateway.py  main.py  migration.py  muc.py  session.py  slixpatch.py  test.py  types.py  util.py
slidge/command/: __init__.py  adhoc.py  admin.py  base.py  categories.py  chat_command.py  register.py  user.py
slidge/contact/: __init__.py  contact.py  roster.py
slidge/core/: __init__.py  adhoc.py  cache.py  chat_command.py  config.py  contact.py  delivery_receipt.py  disco.py  gateway.py  pubsub.py  session.py
slidge/core/command/: __init__.py  adhoc.py  admin.py  base.py  chat_command.py  register.py  user.py
slidge/core/contact/: __init__.py  contact.py  roster.py
slidge/core/dispatcher/: __init__.py  caps.py  disco.py  marker.py  message.py  presence.py  registration.py  search.py  session_dispatcher.py  util.py  vcard.py
slidge/core/gateway/: __init__.py  base.py  caps.py  chat_state.py  delivery_receipt.py  disco.py  mam.py  muc_admin.py  ping.py  presence.py  registration.py  search.py  session_dispatcher.py  util.py  vcard.py  vcard_temp.py
slidge/core/mixins/: __init__.py  attachment.py  avatar.py  base.py  db.py  disco.py  lock.py  message.py  message_maker.py  message_text.py  presence.py  recipient.py
slidge/core/muc/: __init__.py  archive.py  bookmarks.py  participant.py  room.py
slidge/db/: __init__.py  avatar.py  meta.py  models.py  store.py
slidge/db/alembic/: env.py
slidge/group/: __init__.py  archive.py  bookmarks.py  participant.py  room.py
slidge/legacy/: base.py  client.py  contact.py  dummy.py  session.py  signal.py  signald.py  telegram.py  util.py
slidge/mixins/: __init__.py  base.py  message.py  presence.py
slidge/plugins/: dummy.py  facebook.py  hackernews.py  mattermost.py  messenger.py  signal.py  skype.py  steam.py  telegram.py
slidge/plugins/discord/: __init__.py  client.py  commands.py  config.py  contact.py  group.py  session.py  util.py
slidge/plugins/discord_self/: __init__.py  client.py  session.py
slidge/plugins/facebook/: __init__.py  client.py  config.py  contact.py  gateway.py  session.py  util.py
slidge/plugins/mattermost/: __init__.py  api.py  contact.py  gateway.py  session.py  util.py  websocket.py
slidge/plugins/signal/: __init__.py  config.py  contact.py  gateway.py  group.py  session.py  txt.py  util.py
slidge/plugins/steam/: __init__.py  client.py  contact.py  gateway.py  session.py  util.py
slidge/plugins/telegram/: __init__.py  client.py  config.py  contact.py  gateway.py  group.py  session.py  util.py
slidge/plugins/whatsapp/: __init__.py  config.py  contact.py  event.go  gateway.go  gateway.py  go.mod  go.sum  group.py  session.go  session.py  util.py
slidge/slixfix/: __init__.py  delivery_receipt.py  roster.py
slidge/util/: __init__.py  archive_msg.py  argparsers.py  conf.py  db.py  error.py  schema.sql  sql.py  test.py  types.py  util.py
slidge/xep_0055/: search.py
slidge/xep_0077/: __init__.py  register.py
slidge/xep_0100/: __init__.py  gateway.py
slidge/xep_0115/: __init__.py  caps.py  static.py
slidge/xep_0333/: __init__.py
slidge/xep_0356/: __init__.py  privilege.py  stanza.py
slidge/xep_0363/: http_upload.py
superduper/: __init__.py  contact.py  gateway.py  group.py  legacy_client.py  session.py  util.py
tests/: conftest.py  pytest.ini  test_archive.py  test_attachment.py  test_avatar.py  test_backfill.py  test_buddy.py  test_chat_commands.py  test_config.py  test_contact.py  test_database.py  test_fb.py  test_feature_restriction.py  test_gateway.py  test_mds.py  test_muc.py  test_name_in_constructor.py  test_perf.py  test_pubsub.py  test_resourceprep.py  test_session.py  test_session_2.py  test_set_name_before_fill.py  test_shakespeare.py  test_signal.py  test_stanza_link_preview.py  test_stanza_xep_0055.py  test_stanza_xep_0292.py  test_stanza_xep_0356.py  test_stream.py  test_stream_xep_0055.py  test_stream_xep_0292.py  test_stream_xep_0356.py  test_stream_xep_0385.py  test_stream_xep_0447.py  test_telegram.py  test_util.py  test_vcard.py  test_whatsapp.py
tests/test_adhoc/: test_access.py  test_confirmation.py  test_form.py  test_reported.py
tests/test_db/: test_store.py  test_user.py
(+135 files in other folders)
