[tool.poetry]
name = "slidge"
version = "0.0.0-dev"
description = "XMPP bridging framework"
authors = ["Nicolas Cedilnik <nicoco@nicoco.fr>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
homepage = "https://sr.ht/~nicoco/slidge/"

[tool.poetry.dependencies]
python = "^3.9"
qrcode = ">=7.4.1"
Pillow = ">=8.1.0"
aiohttp = {version = "^3.8.3", extras = ["speedups"]}
ConfigArgParse = "^1.5.3"
pickle-secure = "^0.99.9"
python-magic = "^0.4.27"
slixmpp = "^1.8.4"

# it is very unclear why I had to add these sections but got various setuptools-
# related errors without them.
[project]
name = "slidge"
version = "0.0.0-dev"
[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
include = ["slidge*"]
[tool.setuptools.package-data]
slidge = ["py.typed"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "*"
black = { version = "*", extras = ["d"] }
Sphinx = "^6"
Pygments = "^2.8.0"
sphinx-argparse = "^0.4.0"
sphinx-autoapi = "^2.0.0"
furo = "^2023.03.27"
mypy = "^1.2"
isort = "^5.11.4"
ruff = "^0.0.259"
xmldiff = "^2.5"
types-pillow = "^9.5.0.0"
pre-commit = "^3.3.0"

[tool.poetry.group.dev.dependencies.slidge-dev-helpers]
git = "https://git.sr.ht/~nicoco/slidge-dev-helpers"
branch = "master"

[tool.poetry.scripts]
slidge = 'slidge.__main__:main'

[tool.mypy]
check_untyped_defs = true
files = ["slidge"]
exclude = ["tests", "slidge.util.xep*"]

[[tool.mypy.overrides]]
module = [
    "configargparse",
    "qrcode",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = ["xep_*", "tests"]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
    "if .*TYPE_CHECKING:",
    "raise NotImplementedError"
]
