[tool.poetry]
name = "slidge"
version = "0.0.0-dev"
description = "XMPP bridging framework"
authors = ["Nicolas Cedilnik <nicoco@nicoco.fr>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
homepage = "https://sr.ht/~nicoco/slidge/"
repository = "https://git.sr.ht/~nicoco/slidge/"
documentation = "https://slidge.im/"
classifiers = [
    "Topic :: Internet :: XMPP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug tracker" = "https://todo.sr.ht/~nicoco/slidge"
"Chat room" = "https://conference.nicoco.fr:5281/muc_log/slidge/"

[tool.poetry.dependencies]
python = "^3.11"
qrcode = "^7.4.1"
Pillow = "^10"
aiohttp = {version = "^3.8.3", extras = ["speedups"]}
ConfigArgParse = "^1.5.3"
pickle-secure = "^0.99.9"
python-magic = "^0.4.27"
slixmpp = "^1.8.5"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
thumbhash = "^0.1.2"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "*"
black = { version = "*", extras = ["d"] }
Sphinx = "^7"
Pygments = "^2.8.0"
sphinx-argparse = "^0.4.0"
sphinx-autoapi = "^3.0.0"
furo = "^2023.03.27"
mypy = "^1.2"
isort = "^5.11.4"
ruff = "^0.0.259"
xmldiff = "^2.5"
types-pillow = "^9.5.0.0"
pre-commit = "^3.3.0"
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies.slidge-dev-helpers]
git = "https://git.sr.ht/~nicoco/slidge-dev-helpers"
branch = "master"

[tool.poetry.scripts]
slidge = 'slidge.main:main'

[tool.mypy]
check_untyped_defs = true
files = ["slidge", "superduper"]
exclude = ["tests", "slidge.slixfix.*"]

[[tool.mypy.overrides]]
module = [
    "thumbhash",
    "configargparse",
    "qrcode",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = ["xep_*", "tests"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["slidge"]

[tool.coverage.report]
exclude_lines = [
    "if .*TYPE_CHECKING:",
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
asyncio_mode = "strict"
filterwarnings = [
    "ignore:The object should be created within an async function:DeprecationWarning:aiohttp",
    "ignore:.*pkg_resources.*:DeprecationWarning",
    "ignore::UserWarning:slidge",
    "ignore:coroutine 'XMLStream._end_stream_wait' was never awaited.*:RuntimeWarning"
]
